# solard

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
acpi_als/: __init__.py
acpi_als_daemon/: acpi_als_daemon.py
solard/: __init__.py
sunfall/: sunfall.py
systemd/: acpi-als-daemon.service
