[metadata]
name = sunfall
summary = daemon for acpi Ambient Light Sensor and Screen/Keyboard backlight
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = Mehdi Abaakouk <sileht@sileht.net>
home-page = https://github.com/sileht/sunfall
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    sunfall

[entry_points]
console_scripts =
    sunfall = sunfall.sunfall:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = sunfall/locale
domain = sunfall

[update_catalog]
domain = sunfall
output_dir = sunfall/locale
input_file = sunfall/locale/sunfall.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = sunfall/locale/sunfall.pot
