[metadata]
name = solard
summary = daemon for acpi Ambient Light Sensor and Screen/Keyboard backlight
description-file =
    README.rst
author = Mehdi Abaakouk
author-email = Mehdi Abaakouk <sileht@sileht.net>
home-page = https://github.com/sileht/solard
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    solard

[entry_points]
console_scripts =
    solard = solard:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = solard/locale
domain = solard

[update_catalog]
domain = solard
output_dir = solard/locale
input_file = solard/locale/solard.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = solard/locale/solard.pot
