[metadata]
name = solard
summary = daemon for acpi Ambient Light Sensor and Screen/Keyboard backlight
long_description = file: README.rst
author = Mehdi Abaakouk
author-email = Mehdi Abaakouk <sileht@sileht.net>
home-page = https://github.com/sileht/solard
classifier =
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages =
    solard
package-data =
    solard = *.svg

include_package_data = true
install_requires =
    python-xlib

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    solard = solard:main

[bdist_wheel]
universal=1
